import java.time.LocalDateTime
import java.time.format.DateTimeFormatter

plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id "org.sonarqube" version "3.4.0.2513"
    id 'com.kncept.junit.reporter' version '2.1.0'
    id 'com.samares.md_plugin_build' version "0.115.2-SNAPSHOT"
}

// ============================= GLOBAL VARIABLES DECLARATION =============================

ext.thePluginDeliveryName = pluginPackage + "_" + version
ext.theTestPluginDeliveryName = testPluginPackage + "_" + version
ext.srcLocalDestinationDir = localDeliverPath + "/" + pluginPackage + "/" + mdVersionShort + "/" + pluginPackage + "_" + mdVersionShort + "_" + version
ext.buildNumber = project.hasProperty('buildNumber') ? project.getProperty('buildNumber') : System.currentTimeSeconds()
ext.timestamp = DateTimeFormatter.ofPattern("yyyy-MM-dd-HH:mm").format(LocalDateTime.now())
ext.isRelease = !version.endsWith("-SNAPSHOT")
var userDirName = System.getProperty("user.dir")
var projectsResources = "\\..\\..\\src\\test\\resources\\projects"
var resourcesDir = userDirName + projectsResources

// ============================= REPOSITORY DECLARATION & DEPENDENCIES =============================

repositories {
    maven {
        allowInsecureProtocol = true
        credentials {
            username nexusUsername
            password nexusPassword
        }
        url = "$nexusUrl/maven-internal-releases"
        name 'Samares Nexus internal releases'
    }
    maven {
        allowInsecureProtocol = true
        credentials {
            username nexusUsername
            password nexusPassword
        }
        url = "$nexusUrl/maven-releases"
        name 'Samares Nexus releases'
    }
    maven {
        allowInsecureProtocol = true
        credentials {
            username nexusUsername
            password nexusPassword
        }
        url = "$nexusUrl/maven-snapshots"
        name 'Samares Nexus snapshots'
    }
    mavenCentral()
}

dependencies {
    // Use MCSE 2021x Refresh2
    cameo 'com.nomagic:mcse:2021x_Refresh2_HF2@zip'

    // This ensures classpath load order to match the MagicDraw provided order and then includes extras needed for non-OpenAPI stuff.
    cameoDependencies fileTree(dir: 'build/install', include: ['lib/**.jar'])
    cameoDependencies fileTree(dir: 'build/install/plugins/com.nomagic.requirements', include: ['lib/**.jar'])

    pluginLibrary project('omf-core')
    pluginLibrary project('omf-test')

    unitTests 'junit:junit:4.12'
    unitTests 'ant:ant-junit:1.6.5'
    unitTests 'org.apache.ant:ant:1.8.2'
    unitTests project('omf-test')

    //zippedMDPlugin "com.nomagic.magicdraw:devtools:2021xR2@zip"
}

// Samares gradle plugin configuration
mdPluginBuild {
    humanVersion = version
    buildTimestamp = timestamp
    myPluginName = pluginName
    myPackage = pluginPackage
    myPluginId = pluginId
    myPluginMainClass = pluginMainClass
    localDeliveryDirectory = srcLocalDestinationDir
    distributionFolderName = generatedDistFolderName
    descriptorFile = descriptorFileName
    pluginDeliveryName = thePluginDeliveryName
    humanVersionCore = "0.0.0"
    testDescriptorFile = testDescriptorFileName
    testPluginDeliveryName = theTestPluginDeliveryName
    myTestPluginId = testPluginId
    myTestPluginName = testPluginName
    myTestPluginMainClass = testPluginMainClass
    myTestPackage = testPluginPackage
    testDistributionFolderName = testDistFolderName
}

// ======================== JAVA TASKS CONFIG ========================
// Configuration for javaExec Tasks
tasks.withType(JavaExec) {
    doFirst {
        classpath fileTree(dir: 'build/install', include: ['lib/**.jar'])
    }

    workingDir 'build/install'
    ignoreExitValue true

    standardOutput = System.out
    errorOutput = System.err

    main = 'com.nomagic.magicdraw.Main'

    args 'TESTER'
}

//TODO is this necessary ?
tasks.withType(Tar) {
    enabled = false
}

// ======================== GRADLE TASKS DEFINITION ========================
// Customize clean task to not remove all the files from build dir
clean {
    group '_dev'
    // Don't delete build dir and sub Dir
    delete = []
    // Delete those specific dir :
    delete 'build/classes', 'build/distributions', 'build/generated',
            "build/$generatedDistFolderName", 'build/libs', 'build/plugin',
            'build/reports', "build/$testDistFolderName",
            'build/tmp'
}

// Task to delete plugins created before a new build.
// Previously in custom task clean, it was blocking the "hot debug" mode
task deletePlugins(type: Delete) {
    group '_dev'
    delete 'build/install/plugins/' + pluginPackage,
            'build/tmp', 'build/install/plugins/' + pluginPackage,
            'build/install/plugins/' + testPluginPackage,
            'build/test-reports'
}

task fatJar(type: Jar) {
    baseName = 'omf-fatjar'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from sourceSets.main.allSource
    from { configurations.pluginLibrary.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

// Encoding option for all javaCompile tasks
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

// Source definition for jar building
task sourceJar(type: Jar) {
    archiveClassifier.set("sources")
    from sourceSets.main.allSource
}
sourceJar.dependsOn classes


// ============TESTS SETUP (TASKS, DISTRIBUTION, JVM)========================
task testJar(type: Jar) {
    archiveClassifier.set("tests")
    from sourceSets.test.output.classesDirs
}


// Args for jvm (used with commandLineActionLauncher from CAMEO)
def testArgs = [
        '-Desi.system.config=data/application.conf',
        '-Dcom.nomagic.magicdraw.commandline.action=' + testLauncher,
        '-Dtests.resources=' + resourcesDir
]

def debugArgs = [
        '-Xdebug',
        '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=9099',
        '-Dcom.sun.management.jmxremote.port=1099',
        '-Dcom.sun.management.jmxremote.authenticate=false',
        '-Dcom.sun.management.jmxremote.ssl=false'
]

def twcArgs = [
        "-DserverIp=$ipServer",
        "-DuserName=$twcUsername",
        "-DuserPwd=$twcPassword",
        "-Dtest=true"
]


// To launch units tests in CAMEO from IntelliJ
task runTest(type: JavaExec) {
    group '_dev'
    main = 'com.nomagic.magicdraw.commandline.CommandLineActionLauncher'
    jvmArgs += testArgs
    jvmArgs += twcArgs
    args += '-verbose'
}
runTest.dependsOn installTestPlugin

task runTestNoLog(type: JavaExec) {
    group '_dev'
    main = 'com.nomagic.magicdraw.commandline.CommandLineActionLauncher'
    jvmArgs += testArgs
    jvmArgs += twcArgs
}
runTestNoLog.dependsOn installTestPlugin

task debugTest(type: JavaExec) {
    group '_dev'
    main = 'com.nomagic.magicdraw.commandline.CommandLineActionLauncher'
    jvmArgs += testArgs
    jvmArgs += debugArgs
    jvmArgs += twcArgs
    args += '-verbose'
}
debugTest.dependsOn installTestPlugin


def modelSaveArgs = [
        "-Dcom.nomagic.magicdraw.commandline.action=" + testRetriever,
        "-Dtest=false",
        "-DprojectInitName=ModelForTestAuto_Init.mdzip",   // Mandatory
        "-DprojectFinalName=ModelForTestAuto_Final.mdzip", // Optional, can be left blanked
        "-DsaveLocation=" + resourcesDir
]

task retrieveModel(type: JavaExec) {
    group '_dev'
    main = 'com.nomagic.magicdraw.commandline.CommandLineActionLauncher'
    jvmArgs += testArgs
    jvmArgs += debugArgs
    jvmArgs += twcArgs
    jvmArgs += modelSaveArgs
    args += '-verbose'
}
retrieveModel.dependsOn installTestPlugin

tasks.withType(PublishToMavenRepository) { task ->
    dependsOn(zipPluginLocally)
}

tasks.junitHtmlReport.doLast {
    exec {
        workingDir "$buildDir/test-reports/TEST-HTML"
        //on windows:
        commandLine 'cmd', '/c', 'start index.html'
    }
}

// ============================= TASK CONFIGURATION =============================
javadoc {
    enabled false
}

// Mandatory to CI/CD process
test {
    // Fail the build if units tests are failed ; true to ignore
    ignoreFailures = true
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(11))
    }
}

sonarqube {
    properties {
        property "sonar.projectName", project.name + "_" + mdVersionShort

        //Profiles are generated by Magicdraw so no need to analyse them
        property "sonar.exclusions", "**/profile/**"
    }
}

publishing {
    repositories {
        maven {
            credentials {
                username nexusUsername
                password nexusPassword
            }
            def releasesRepoUrl = "$nexusUrl/maven-releases"
            def snapshotsRepoUrl = "$nexusUrl/maven-snapshots"
            url = isRelease ? releasesRepoUrl : snapshotsRepoUrl
            allowInsecureProtocol true
        }
    }

    publications {
        // Publish built plugin .zip to Nexus repo
        builtPlugin(MavenPublication) {
            groupId = pluginPackage + "." + mdVersionShort
            artifactId = "omf-plugin"
            artifact("$buildDir/builtPlugin/$project.version/${thePluginDeliveryName}.zip")
        }

        // Publish plugin .jar to Nexus repo
        jar(MavenPublication) {
            groupId = pluginPackage + "." + mdVersionShort
            artifactId = "omf-fatJar"
            artifact fatJar
        }
    }
}

junitHtmlReport {
    testResultsDir = "test-reports/TEST-XML"
    testReportsDir = "test-reports/TEST-HTML"
}

zipPluginLocally.dependsOn buildDist
zipTestPluginLocally.dependsOn buildTestDist
deliverLocally.dependsOn zipPluginLocally, zipTestPluginLocally, srcZipDir
debugJava.dependsOn installPlugin, installTestPlugin
installPlugin.dependsOn buildDist, deletePlugins
installTestPlugin.dependsOn installPlugin, buildTestDist
installMagicDraw.dependsOn configurations.cameo
installZippedMDPlugins.dependsOn configurations.zippedMDPlugin
buildDist.dependsOn jar
buildTestDist.dependsOn testJar, buildDist
compileJava.dependsOn clean, installMagicDraw, installZippedMDPlugins
runTestNoLog.finalizedBy 'junitHtmlReport'
runTest.finalizedBy 'junitHtmlReport'
debugTest.finalizedBy 'junitHtmlReport'